<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundbeige"
    tools:context=".Code">
    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:id="@+id/code"
        android:inputType="textPassword"
        android:maxLength="12"
        android:textSize="25sp"
        android:layout_marginLeft="50dp"
        android:autofillHints=""
        android:layout_marginStart="50dp"
        tools:ignore="LabelFor" />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:src="@drawable/delete"
        android:id="@+id/delete"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/todo" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:layout_marginTop="200dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:backgroundTint="#000000"
        android:id="@+id/bt_1"
        android:layout_marginLeft="-350dp"
        tools:targetApi="lollipop"
        android:layout_marginStart="-350dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:layout_marginTop="200dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:backgroundTint="#000000"
        android:id="@+id/bt_2"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        tools:targetApi="lollipop" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:layout_marginTop="200dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:backgroundTint="#000000"
        android:id="@+id/bt_3"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        tools:targetApi="lollipop" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:layout_marginTop="300dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:backgroundTint="#000000"
        android:id="@+id/bt_4"
        android:layout_marginLeft="-330dp"
        android:layout_marginStart="-330dp"
        tools:targetApi="lollipop" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:layout_marginTop="300dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:backgroundTint="#000000"
        android:id="@+id/bt_5"
        android:layout_marginLeft="30dp"
        tools:targetApi="lollipop"
        android:layout_marginStart="30dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:layout_marginTop="300dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:backgroundTint="#000000"
        android:id="@+id/bt_6"
        android:layout_marginLeft="30dp"
        tools:targetApi="lollipop"
        android:layout_marginStart="30dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:layout_marginTop="400dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:backgroundTint="#000000"
        android:id="@+id/bt_7"
        android:layout_marginLeft="-330dp"
        tools:targetApi="lollipop"
        android:layout_marginStart="-330dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:layout_marginTop="400dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:backgroundTint="#000000"
        android:id="@+id/bt_8"
        android:layout_marginLeft="30dp"
        tools:targetApi="lollipop"
        android:layout_marginStart="30dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        android:layout_marginTop="400dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:backgroundTint="#000000"
        android:id="@+id/bt_9"
        android:layout_marginLeft="30dp"
        tools:targetApi="lollipop"
        android:layout_marginStart="30dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:layout_marginTop="500dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:backgroundTint="#000000"
        android:id="@+id/bt_0"
        android:layout_marginLeft="-200dp"
        android:layout_marginStart="-200dp"
        tools:targetApi="lollipop" />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/valider"
        android:src="@drawable/ok"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/todo" />
</LinearLayout>