<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundbeige"
    tools:context=".ChoisirNomProduit">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/entrer_les_caract_restiques_de_produit"
        android:textSize="30sp"
        android:layout_marginStart="50dp">
    </TextView>
    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:id="@+id/nomproduit"
        android:hint="@string/produit"
        android:layout_marginLeft="-300dp"
        android:layout_marginStart="-300dp"
        android:autofillHints=""
        android:inputType="text">

    </EditText>
    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="290dp"
        android:hint="@string/mod_le"
        android:id="@+id/nommodele"
        android:layout_marginLeft="-250dp"
        android:layout_marginStart="-250dp"
        android:autofillHints=""
        android:inputType="text">

    </EditText>
    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="330dp"
        android:hint="@string/marque"
        android:id="@+id/nommarque"
        android:layout_marginLeft="-250dp"
        android:autofillHints=""
        android:inputType="text"
        android:layout_marginStart="-250dp">

    </EditText>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginLeft="-250dp"
        android:text="@string/valider"
        android:textSize="20sp"
        android:id="@+id/bt_valider"
        android:backgroundTint="#00000000"
        android:textColor="@color/teal_200"
        android:layout_marginTop="400dp"
        android:layout_marginStart="-250dp"
        tools:targetApi="lollipop" />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginLeft="-240dp"
        android:text="@string/liste_des_prduits_marques_et_mod_les"
        android:backgroundTint="#00000000"
        android:textSize="20sp"
        android:textColor="@color/teal_200"
        android:id="@+id/ListeDesProduit"
        android:layout_marginTop="450dp"
        tools:targetApi="lollipop"
        android:layout_marginStart="-240dp" />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="-300dp"
        android:text="@string/supprimer"
        android:backgroundTint="#00000000"
        android:textSize="20sp"
        android:textColor="@color/teal_200"
        android:id="@+id/SupprimerProduit"
        android:layout_marginTop="520dp"
        android:layout_marginStart="-300dp"
        tools:targetApi="lollipop" />
</LinearLayout>