<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundbeige"
    tools:context=".VoirSignature">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".VoirSignature">
    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:id="@+id/nomclient"
        android:hint="@string/nom_de_client"
        android:layout_marginLeft="80dp"
        android:autofillHints=""
        android:inputType="text"
        android:layout_marginStart="80dp">

    </EditText>
    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:id="@+id/nomproduit"
        android:hint="@string/produit"
        android:layout_marginLeft="-250dp"
        android:autofillHints=""
        android:inputType="text"
        android:layout_marginStart="-250dp">

    </EditText>
    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="290dp"
        android:hint="@string/mod_le"
        android:id="@+id/nommodele"
        android:layout_marginLeft="-250dp"
        android:layout_marginStart="-250dp"
        android:autofillHints=""
        android:inputType="text">

    </EditText>
    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="330dp"
        android:hint="@string/marque"
        android:id="@+id/nommarque"
        android:layout_marginLeft="-250dp"
        android:autofillHints=""
        android:inputType="text"
        android:layout_marginStart="-250dp">

    </EditText>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginLeft="-250dp"
        android:text="@string/valider"
        android:textSize="20sp"
        android:id="@+id/valider"
        android:backgroundTint="#00000000"
        android:textColor="@color/teal_200"
        android:layout_marginTop="400dp"
        android:layout_marginStart="-250dp"
        tools:targetApi="lollipop" />
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-250dp"
        android:layout_marginTop="500dp"
        android:layout_marginStart="-250dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:id="@+id/receptionnaire"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/le_r_ceptionnaire"
                android:textSize="20sp"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_marginLeft="180dp"
                android:layout_marginStart="180dp"
                android:id="@+id/magasinier"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/le_magasinier"
                android:layout_marginLeft="180dp"
                android:textSize="20sp"
                android:layout_marginStart="180dp" />
            <ImageView
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_marginLeft="370dp"
                android:layout_marginStart="370dp"
                android:id="@+id/respequipe"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/resp_equipe"
                android:layout_marginLeft="370dp"
                android:textSize="20sp"
                android:layout_marginStart="370dp" />
            <ImageView
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_marginLeft="500dp"
                android:id="@+id/visaclient"
                android:layout_marginStart="500dp"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/visa_client"
                android:layout_marginLeft="500dp"
                android:textSize="20sp"
                android:layout_marginStart="500dp" />
        </RelativeLayout>
    </HorizontalScrollView>

</LinearLayout></ScrollView>