<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gris">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".satisfaction_client">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="-160dp"
            android:id="@+id/open_menu"
            android:src="@drawable/open_menu"
            android:contentDescription="@string/todo"
            android:layout_marginStart="-160dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/degr_de_satisfaction"/>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/s"
            android:contentDescription="@string/todo" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/groupradi">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:id="@+id/satisfait"
                android:text="@string/satisfait"
                android:layout_marginStart="10dp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:id="@+id/peu_satisfait"
                android:text="@string/peu_satisfait"
                android:layout_marginStart="10dp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:id="@+id/non_satisfait"
                android:text="@string/non_satisfait"
                android:layout_marginStart="10dp" />
        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:backgroundTint="@color/teal_200"
            android:id="@+id/remarque"
            android:text="@string/vos_remarque"
            tools:targetApi="lollipop" />
    </LinearLayout></ScrollView>