<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/question">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".travail_termine_ou_non">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="-10dp"
            android:id="@+id/open_menu"
            android:src="@drawable/open_menu"
            android:contentDescription="@string/todo"
            android:layout_marginStart="-10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/le_travail_est_il_termin"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="-60dp"
            android:textSize="20sp"
            android:textColor="#0000FF"
            android:textStyle="bold"
            android:layout_marginStart="-60dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="290dp"
            android:layout_marginLeft="-190dp"
            android:text="@string/oui"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/roundbuttonblue"
            android:id="@+id/button_oui"
            android:textStyle="bold"
            android:layout_marginStart="-190dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="290dp"
            android:background="@drawable/roundbuttonrouge"
            android:layout_marginLeft="-30dp"
            android:text="@string/non"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/button_non"
            android:textStyle="bold"
            android:layout_marginStart="-30dp" />

    </LinearLayout></ScrollView>